# qt_cpp_sentry

./: .gitmodules  CMakeLists.txt  NOTICE  README.md
.github/workflows/: ci-build.yml
cmake/: generate_version_h.cmake  prepare_version.cmake
src/: CMakeLists.txt  crashhandler.cpp  crashhandler.h  main.cpp  openfilehelper.h
